@@ -21,7 +21,7 @@
         <dependency>
             <groupId>us.pserver</groupId>
             <artifactId>tools-io</artifactId>
-            <version>1.2</version>
+            <version>1.3</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
@@ -36,13 +36,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.4.1</version>
+            <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.4.1</version>
+            <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -51,17 +51,17 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <release>11</release>
+                  <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>2.22.2</version>
                 <configuration>
                     <argLine>
-                        --add-opens java.base/java.lang=doxy --add-opens java.base/java.lang=doxy.test --add-opens java.base/java.util=doxy --add-opens java.base/java.util=doxy.test --illegal-access=permit 
+                        --illegal-access=permit 
                     </argLine>
                     <useSystemClassLoader>false</useSystemClassLoader>
                     <includes>
